# ayatana-greeter-session-broadcast

./: CMakeLists.txt  README  test-call.sh
data/: CMakeLists.txt  ayatana-greeter-session-broadcast-session.conf  com.canonical.Unity.Greeter.Broadcast.gschema.xml  com.canonical.Unity.Greeter.Broadcast.service.in  com.canonical.Unity.Greeter.Broadcast.xml  org.ayatana.Desktop.Greeter.Broadcast.conf  org.ayatana.Desktop.Greeter.Broadcast.gschema.xml  org.ayatana.Desktop.Greeter.Broadcast.service.in  org.ayatana.Desktop.Greeter.Broadcast.xml  unity-greeter-session-broadcast-session.conf
debian/: ayatana-greeter-session-broadcast.install  changelog  control  copyright  libayatana-greeter-session-broadcast1-dev.install  libayatana-greeter-session-broadcast1.install  libunity-greeter-session-broadcast1-dev.install  libunity-greeter-session-broadcast1.install  rules  unity-greeter-session-broadcast.install  watch
libayatana-greeter-session-broadcast/: CMakeLists.txt  ayatana-greeter-session-broadcast.c  ayatana-greeter-session-broadcast.h  ayatana-greeter-session-broadcast.pc.in
libunity-greeter-session-broadcast/: CMakeLists.txt  unity-greeter-session-broadcast.c  unity-greeter-session-broadcast.h  unity-greeter-session-broadcast.pc.in
service/: CMakeLists.txt  service.c  unity-greeter-session-broadcast-service.c
tests/: manual
